# ReactiveEulerSolver

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Readme.md
apps/burke_2012/: CMakeLists.txt  hpx.burke_2012.sod.cpp  hpx.kinetic.burke_2012.detonation.cpp  hpx.kinetic.burke_2012.sod.cpp  parallel.burke_2012.sod.cpp  parallel.kinetic.burke_2012.detonation.cpp  parallel.kinetic.burke_2012.sod.cpp  serial.burke_2012.sod.cpp  serial.kinetic.burke_2012.detonation.cpp  serial.kinetic.burke_2012.sod.cpp
apps/gri_30/: CMakeLists.txt  hpx.kinetic.gri_30.detonation.cpp  hpx.kinetic.gri_30.sod.cpp  parallel.kinetic.gri_30.detonation.cpp  parallel.kinetic.gri_30.sod.cpp  serial.kinetic.gri_30.sod.cpp
apps/single_stage/: CMakeLists.txt  distributed.single_stage.sod.cpp  hpx.single_stage.2d.circle.cpp  hpx.single_stage.sod.cpp  parallel.single_stage.2d.circle.cpp  parallel.single_stage.sod.cpp  serial.single_stage.sod.cpp
burke_2012/: CMakeLists.txt  hpx.kinetic.burke_2012.detonation.cpp  hpx.kinetic.burke_2012.sod.cpp  serial.kinetic.burke_2012.detonation.cpp  serial.kinetic.burke_2012.sod.cpp
core/: CMakeLists.txt  Readme.md
core/cmake/: CheckApply.cmake  CheckArray.cmake  CheckClamp.cmake  CheckInvoke.cmake  CheckOptional.cmake  CheckStdApply.cpp  CheckStdArray.cpp  CheckStdClamp.cpp  CheckStdExperimentalOptional.cpp  CheckStdExperimentalVariant.cpp  CheckStdInvoke.cpp  CheckStdOptional.cpp  CheckStdVariant.cpp  CheckVariant.cmake
core/include/fub/: accessor_native.hpp  accessor_simd.hpp  address_native.hpp  algorithm.hpp  aligned_address.hpp  array.hpp  config.hpp.in  dynamic_extent.hpp  extents.hpp  fancy_pointer.hpp  functional.hpp  index_range.hpp  layout_left.hpp  layout_right.hpp  layout_simd.hpp  mdspan.hpp  native_accessor.hpp  native_address.hpp  optional.hpp  segmented_resource.hpp  simd.hpp  simd_span.hpp  span.hpp  tuple.hpp  type_traits.hpp  utility.hpp  variant.hpp
core/include/fub/simd/: avx.hpp  avx512.hpp  native.hpp  scalar.hpp  simd_fwd.hpp  sse.hpp
core/tests/: CMakeLists.txt  test.core.array.cpp  test.core.extents.cpp  test.core.fancy_poiner.cpp  test.core.layout.cpp  test.core.mdspan.cpp  test.core.optional.cpp  test.core.simd.cpp  test.core.simd_span.cpp  test.core.span.cpp  test.core.variant.cpp
driver/: CMakeLists.txt
driver/include/fub/: print_cycle_timings.hpp  run_simulation.hpp
driver/include/fub/distributed/: single_stage.1d.hpp
driver/include/fub/hpx/: advance.hpp  burke_2012.1d.hpp  burke_2012_1d.hpp  driver.hpp  initialise.hpp  kinetic.burke_2012.1d.hpp  kinetic.burke_2012_1d.hpp  kinetic.gri_30.1d.hpp  single_stage.1d.hpp  single_stage.2d.hpp  single_stage.3d.hpp  single_stage_1d.hpp
driver/include/fub/parallel/: burke_2012.1d.hpp  kinetic.burke_2012.1d.hpp  kinetic.gri_30.1d.hpp  single_stage.1d.hpp  single_stage.2d.hpp  single_stage.3d.hpp
driver/include/fub/serial/: advance.hpp  burke_2012.1d.hpp  burke_2012_1d.hpp  driver.hpp  initialise.hpp  kinetic.burke_2012.1d.hpp  kinetic.burke_2012_1d.hpp  kinetic.gri_30.1d.hpp  single_stage.1d.hpp  single_stage_1d.hpp
driver/source/fub/distributed/: advance.hpp  initialise.hpp  single_stage.1d.cpp
driver/source/fub/hpx/: burke_2012.1d.cpp  burke_2012_1d.cpp  kinetic.burke_2012.1d.cpp  kinetic.burke_2012_1d.cpp  kinetic.gri_30.1d.cpp  single_stage.1d.cpp  single_stage.2d.cpp  single_stage_1d.cpp
driver/source/fub/parallel/: advance.hpp  burke_2012.1d.cpp  initialise.hpp  kinetic.burke_2012.1d.cpp  kinetic.gri_30.1d.cpp  single_stage.1d.cpp  single_stage.2d.cpp
driver/source/fub/serial/: advance.hpp  burke_2012.1d.cpp  burke_2012_1d.cpp  initialise.hpp  kinetic.burke_2012.1d.cpp  kinetic.burke_2012_1d.cpp  kinetic.gri_30.1d.cpp  single_stage.1d.cpp  single_stage_1d.cpp
gri_30/: CMakeLists.txt  hpx.kinetic.gri_30.detonation.cpp  hpx.kinetic.gri_30.sod.cpp  serial.kinetic.gri_30.sod.cpp
grid/: CMakeLists.txt
grid/cmake/: FindCGNS.cmake  FindP4EST.cmake
grid/include/fub/: concepts.hpp  config.hpp.in  face.hpp  grid.hpp  hana.hpp  interval_map.hpp  linearily_interpolate.hpp  octree.hpp  patch.hpp  patch_view.hpp  quantities.hpp  quantities_ref.hpp  uniform_cartesian_coordinates.hpp  variable.hpp  variable_accessor.hpp  variable_data.hpp  variable_list.hpp  variable_map.hpp  variable_mapping.hpp  variable_ref.hpp  variable_row.hpp  variable_view.hpp  variables.hpp
grid/include/fub/distributed/: grid.hpp
grid/include/fub/hpx/: distributed_grid.hpp  grid.hpp
grid/include/fub/output/: cgns.hpp  gnuplot.hpp
grid/include/fub/p4est/: connectivity.hpp  forest.hpp  ghost_layer.hpp  ghost_meta_data.hpp  grid.hpp  mesh.hpp  (+3 more)
grid/tests/: CMakeLists.txt  test.grid.cgns.cpp  test.grid.distributed_grid.cpp  test.grid.gnuplot.cpp  test.grid.grid.cpp  test.grid.hpx_lambda_action.cpp  test.grid.interval_map.cpp  test.grid.octree.cpp  test.grid.p4est.cpp  test.grid.patch.cpp  test.grid.patch_view.cpp  test.grid.quantities.cpp  test.grid.quantities_ref.cpp  test.grid.uniform_cartesian_coordinates.cpp  test.grid.variable_accessor.cpp  test.grid.variable_data.cpp  test.grid.variable_list.cpp  test.grid.variable_map.cpp  test.grid.variable_view.cpp  test.grid.variables.cpp  test.grid.variables_assembly.cpp
single_stage/: CMakeLists.txt  serial.single_stage.sod.cpp
solver/: CMakeLists.txt
solver/include/fub/: equation.hpp  execution.hpp  flux_method.hpp  godunov_method.hpp  godunov_splitting.hpp  grid.hpp  hyperbolic_system_solver.hpp  hyperbolic_system_source_solver.hpp  permutate_dimensions.hpp  polymorphic_boundary_condition.hpp  strang_splitting.hpp
solver/tests/: CMakeLists.txt  assembly.euler.hlle_riemann_solver.cpp  assembly.euler.hlle_signal_velocity.cpp  assembly.euler.perfect_gas.cpp  assembly.time_integrator.forward_euler.cpp  benchmark.euler.hlle_riemann_solver.cpp  benchmark.euler.hlle_signal_velocity.cpp  benchmark.euler.perfect_gas.cpp  benchmark.time_integrator.forward_euler.cpp  test.euler.boundary_condition.reflective.cpp  test.euler.perfect_gas_solver.cpp  test.solver.burke_2012.cpp  test.solver.hyperbolic_system_solver.cpp  test.solver.ode_solver.cpp
(+41 files in other folders)
